--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@ js-csp permet:
 </script></section></div>
         </div>
 
-        <script src="/lib/js/head.min.js"></script>
-        <script src="/js/reveal.js"></script>
+        <script src="lib/js/head.min.js"></script>
+        <script src="js/reveal.js"></script>
 
         <script>
             function extend() {
@@ -332,12 +332,12 @@ js-csp permet:
 
             // Optional libraries used to extend on reveal.js
             var deps = [
-              { src: '/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-              { src: '/plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
-              { src: '/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
-              { src: '/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-              { src: '/plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
-              { src: '/plugin/math/math.js', async: true }
+              { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+              { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+              { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
+              { src: 'plugin/math/math.js', async: true }
             ];
 
             // default options to init reveal.js
